feat : initial commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
-Under construction...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="codexashutosh">
+    <meta property="og:description" content="Hi! I am an SDE at KPMG and this is my portfolio. I am @codexashutosh everywhere!">
+    <meta property="og:url" content="https://ashutoshtripathy.com">
+    <meta name="keywords" content="codexashutosh, Ashutosh Tripathy, codexashutosh.com, Pythoneer, Ashutosh Tripathy CV, Ashutosh Tripathy Resume, Ashutosh Tripathy Portfolio, Ashutosh Tripathi, Ashutosh Tripathi CV, Ashutosh Tripathi Resume, Ashutosh Tripathi Portfolio, Python Fullstack Data Engineer, Python Consultant, Python Developer, ashutoshtripathy.com, ashutoshtripathi.com, free tutorial, free cheatshet, free training, blog, technical blog, coding, coders, programming blog, free online tools">
+    <meta property="og:site_name" content="codexashutosh">
+    <title>codexashutosh</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="images/cxa_logo.png" type="image/png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC41JQNXWB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DC41JQNXWB');
+    </script>
+</head>
+<body>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
+    <div class="nav">
+        <img class="logo" src="images/cxa_logo_grey.png" alt="" width="48px">
+    </div>
+    <div class="section-1">
+        <div class="banner">
+            <h1 id="title" class="title">codeXashutosh</h1>
+            <!-- <img class="logo" src="images/cxa_logo_grey.png" alt="" width="48px"> -->
+        </div>
+        <p class="content">
+            A Software Engineer experienced in building applications, developing APIs, designing web and mobile apps, analyzing large amounts of data, visualizing and extracting insights. Over these years, he has managed to work with multiple fields, technologies and softwares. I am @codexashutosh everywhere!
+        </p>
+    </div>
+    <div class="section-2">
+        <p class="heading">
+            Have expertise in some technologies...
+        </p>
+        <div class="cards">
+            <div class="card">
+                <img src="images/python.png" alt="">
+                <p class="card-label">Python</p>
+                <p>Applied Python for full-stack development, data analysis, and engineering insights.</p>
+            </div>
+            <div class="card">
+                <img src="images/flask.png" alt="">
+                <p class="card-label">Flask Framework</p>
+                <p>Developed web applications with Flask, leveraging its robust framework for rapid development and deployment.</p>
+            </div>
+            <div class="card">
+                <img src="images/mongodb.png" alt="">
+                <p class="card-label">MongoDB</p>
+                <p>Leveraged MongoDB's flexible document-based database structure to efficiently store and manage data for scalable applications.</p>
+            </div>
+            <div class="card">
+                <img src="images/github actions.svg" alt="">
+                <p class="card-label">GitHub Actions</p>
+                <p>Utilized GitHub Actions for Python-based automation tasks, including insights generation and metadata management.</p>
+            </div>
+            <div class="card">
+                <img src="images/html css.png" alt="">
+                <p class="card-label">HTML & CSS</p>
+                <p>Crafted responsive and visually appealing web interfaces, ensuring optimal user experience across devices.</p>
+            </div>
+            <div class="card">
+                <img src="images/bash.png" alt="">
+                <p class="card-label">BASH</p>
+                <p>Automated system tasks and streamlined workflows to enhance efficiency and productivity.</p>
+            </div>
+            <div class="card">
+                <img src="images/jira.png" alt="">
+                <p class="card-label">Jira</p>
+                <p>Effectively managing project tasks, workflows and issues with Jira's versatile platform.</p>
+            </div>
+            <div class="card">
+                <img src="images/linux.png" alt="">
+                <p class="card-label">Linux</p>
+                <p>Experienced in Linux system administration, including Ubuntu and RHEL servers, and delivered Linux OS training and internships.</p>
+            </div>
+        </div>
+    </div>
+    <div class="section-3">
+        <p class="heading">
+            Have worked with some amazing companies...
+        </p>
+        <div class="cards">
+            <div class="card">
+                <img src="images/kpmg logo.jpg" alt="">
+                <p class="card-label">KPMG</p>
+                <p>Full-time (Present)</p>
+                <p>Senior Python Developer in Platform Center of Excellence (PCoE).</p>
+            </div>
+            <div class="card">
+                <img src="images/upGrad.png" alt="">
+                <p class="card-label">upGrad</p>
+                <p>Part-time (Present)</p>
+                <p>Author under Technology Domain.</p>
+            </div>
+            <div class="card">
+                <img src="images/tcs logo.png" alt="">
+                <p class="card-label">TCS</p>
+                <p>Full-time (Past)</p>
+                <p>Python Developer in Banking, Financial Services and Insurance (BFSI) Unit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="section-3">
+        <p class="heading">
+            Have volunteered in some organizations for good cause...
+        </p>
+        <div class="cards">
+            <div class="card">
+                <img src="images/thepsf_logo.jpeg" alt="">
+                <p class="card-label">Python Software Foundation</p>
+                <p>Member</p>
+            </div>
+            <div class="card">
+                <img src="images/quora.png" alt="">
+                <p class="card-label">Quora</p>
+                <p>470k+ views</p>
+            </div>
+            <div class="card">
+                <img src="images/tcs logo.png" alt="">
+                <p class="card-label">TCS</p>
+                <p>Technical Champion under TCS - Corporate Social Responsibility</p>
+            </div>
+            <div class="card">
+                <img src="images/wikihow.png" alt="">
+                <p class="card-label">wikihow</p>
+                <p>Contributing Editor</p>
+            </div>
+        </div>
+    </div>
+    <div class="section-3">
+        <p class="content">
+            I am building a free tutorial on Python, some free online tools and planning to post lesser known facts about some widely known technologies. So please stay tuned! Want to know more about me? Visit <a class="link" href="https://ashutoshtripathy.com">www.ashutoshtripathy.com</span>!
+        </p>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="app/app.js"></script>
+</body>
+</html>
