--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- <img class="logo" src="images/cxa_logo_grey.png" alt="" width="48px"> -->
         </div>
         <p class="content">
-            A Software Engineer experienced in building applications, developing APIs, designing web and mobile apps, analyzing large amounts of data, visualizing and extracting insights. Over these years, he has managed to work with multiple fields, technologies and softwares. I am @codexashutosh everywhere!
+            A Software Engineer with some experience in building applications, developing APIs, designing web and mobile apps, analyzing large amounts of data, visualizing and extracting insights. Over these years, he has managed to work with multiple fields, technologies and softwares. I am @codexashutosh everywhere!
         </p>
     </div>
     <div class="section-2">
@@ -106,6 +106,23 @@
                 <p class="card-label">TCS</p>
                 <p>Full-time (Past)</p>
                 <p>Python Developer in Banking, Financial Services and Insurance (BFSI) Unit.</p>
+            </div>
+        </div>
+    </div>
+    <div class="section-3">
+        <p class="heading">
+            Have got some degrees...
+        </p>
+        <div class="cards">
+            <div class="card">
+                <p class="card-label">B. Tech (ECE)</p>
+                <p>Electronics and Communication Engineering</p>
+                <p>(Major)</p>
+            </div>
+            <div class="card">
+                <p class="card-label">B. Tech (CSE)</p>
+                <p>Computer Science Engineering</p>
+                <p>(Minor)</p>
             </div>
         </div>
     </div>
